调整四个主界面的布局，能够切换

--- a/app/src/main/res/layout/moments.xml
+++ b/app/src/main/res/layout/moments.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--   卡片布局  动态或新闻使用   -->
+<!--   卡片布局  新闻使用   -->
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
