--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,15 @@
     android:layout_height="match_parent">
 
 
-
-
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-    tools:context=".MainActivity">
+        tools:context=".MainActivity">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,6 +61,7 @@
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/bright_grey"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     />
 
