--- a/app/src/main/res/layout/activity_page_main.xml
+++ b/app/src/main/res/layout/activity_page_main.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--layout for main page-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:id="@+id/layout_page_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="fill_parent"
+    >
 
 
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
-
-        <TextView
-            android:id="@+id/main_page_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:text="Main Page  "/>
+        android:src="@drawable/oldtrip"
+        android:scaleType="fitXY"
+        />
 
 
-    </FrameLayout>
 
-</LinearLayout>
+
+
+</FrameLayout>
