--- a/app/src/main/res/layout/activity_page_message.xml
+++ b/app/src/main/res/layout/activity_page_message.xml
@@ -12,14 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
-        <TextView
-            android:id="@+id/message_view"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:text="Message"/>
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
 
 
     </FrameLayout>
