--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -1,7 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/shadow"
+    app:cardCornerRadius="10dp"
+    >
+<LinearLayout
+    android:layout_height="65dp"
+    android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:background="@drawable/downline"
 
+    >
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/header_of_friend"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/girl" />
+
+    <FrameLayout
+        android:id="@+id/content_of_friend"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        >
+
+        <TextView
+            android:id="@+id/name_of_friend"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="top|start"
+            android:layout_margin="7dp"
+            android:text="复复"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/signature_of_friend"
+            android:layout_margin="7dp"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:text="介系你没有体验过的全新版本"
+            android:textSize="13sp"
+            android:layout_gravity="bottom"
+            />
+    </FrameLayout>
+
+</LinearLayout>
 
 
 
