--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:radiostyle="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:orientation="horizontal"
+    app:cardCornerRadius="10dp"
+
+    >
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/downline"
         >
     <LinearLayout
         android:layout_width="0dp"
@@ -17,12 +21,14 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         >
-    <ImageView
-        android:id="@+id/header_of_message"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/header_of_message"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/nav_icon" />
+
 
       <FrameLayout
           android:layout_height="match_parent"
@@ -59,7 +65,7 @@
               android:layout_margin="9dp"
               android:layout_width="19dp"
               android:layout_height="19dp"
-              android:text="8"
+              android:text="1"
               android:textColor="@color/white"
               android:background="@drawable/round_cornor_rectangle"
               />
