--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--  个人信息的上半部分-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:padding="10dp"
-    android:background="?attr/colorPrimary">
+   android:background="@drawable/photo2"
+    >
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -11,14 +14,14 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/nav_icon" />
+        android:src="@drawable/nicolas_cage" />
 
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Tony Green"
+        android:text="旦旦"
         android:textColor="#FFF"
         android:textSize="14sp" />
 
@@ -27,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/username"
-        android:text="tonygreendev@gmail.com"
+        android:text="220@fudan.edu.cn"
         android:textColor="#FFF"
         android:textSize="14sp" />
 
